<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/selectableItemBackground"
    android:clickable="true"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:paddingHorizontal="16dp"
    android:paddingVertical="8dp">

    <ImageView
        android:id="@+id/ivCryptoLogo"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:contentDescription="@string/crypto_logo"
        tools:src="@drawable/ic_crypto" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingStart="8dp"
        android:paddingEnd="8dp">

        <TextView
            android:id="@+id/tvCryptoName"
            style="@style/CryptoNameStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/bitcoin" />

        <TextView
            android:id="@+id/tvCryptoTicker"
            style="@style/CryptoTickerStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            tools:text="@string/btc" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvCryptoPrice"
            style="@style/CryptoPriceStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/_28_600_74" />

        <TextView
            android:id="@+id/tvCryptoChange"
            style="@style/CryptoChangeStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            tools:text="@string/_4_05" />

    </LinearLayout>

</LinearLayout>
