<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/errorLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:contentDescription="@string/error_logo"
            android:src="@drawable/ic_crypto" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:text="@string/error_text"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textFontWeight="400"
            android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnRetry"
            android:layout_width="175dp"
            android:layout_height="36dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/retry_button_shape"
            android:gravity="center"
            android:lineHeight="16dp"
            android:text="@string/error_try"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textFontWeight="500"
            android:letterSpacing="0.05"
            android:textSize="14sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>