<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <android.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:elevation="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:id="@+id/toolbar_description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center_vertical|start"
            android:visibility="gone">

            <ImageButton
                android:id="@+id/desc_tools"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="@color/white"
                android:src="@drawable/ic_arrow_back"/>

            <TextView
                android:id="@+id/toolbar_description_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:text="@string/bitcoin"
                android:textSize="22sp"
                android:lineHeight="23.44dp"
                android:fontFamily="@font/roboto_medium"
                android:textColor="@color/blackTransparent"
                android:gravity="start"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/main_tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible">

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/crypto_list"
                android:textSize="22sp"
                android:lineHeight="23.44dp"
                android:fontFamily="@font/roboto_medium"
                android:textColor="@color/blackTransparent"
                android:gravity="start"/>

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chip_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="13dp"
                android:layout_gravity="start|center_horizontal"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_usd"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="100dp"
                    android:layout_height="35dp"
                    android:textAlignment="center"
                    android:text="@string/usd"
                    android:textSize="14sp"
                    app:chipMinTouchTargetSize="0dp"
                    android:textColor="@color/brightOrange"
                    app:chipBackgroundColor="@color/lightBeige"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_rub"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="100dp"
                    android:layout_height="35dp"
                    android:textAlignment="center"
                    android:text="@string/rub"
                    android:textSize="14sp"
                    app:chipMinTouchTargetSize="0dp"
                    android:textColor="@color/blackTransparent"
                    app:chipBackgroundColor="@color/lightGrey" />

            </com.google.android.material.chip.ChipGroup>

        </LinearLayout>

    </android.widget.Toolbar>

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/nav_host_fragment"
            android:name="androidx.navigation.fragment.NavHostFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:defaultNavHost="true"
            app:navGraph="@navigation/nav_graph" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminateTint="@color/orange"
            android:visibility="gone" />

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>